Changes made to HTML, CSS & JS files
Added HTML to the index file. Created a SRC folder and added the CSS & JS files. Added Styling and JavaScript to the respective folders. Linked the CSS & JS files in the HTML file.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h2>
+      <div>🌦️</div>
+      Currently 19&deg; in Tokyo
+    </h2>
+
+    <h3><span class="thin-numbers">12&deg;</span> / 21&deg;</h3>
+    <ul>
+      <li>
+        <div class="tomorrow">
+          <h4>⛈️Tomorrow</h4>
+          <p>10&deg; / 22&deg;</p>
+        </div>
+      </li>
+      <li>
+        <div class="saturday">
+          <h4>🌤️Saturday</h4>
+          <p>13&deg;/ 23&deg;</p>
+        </div>
+      </li>
+      <li>
+        <div class="sunday">
+          <h4>☀️Sunday</h4>
+          <p>25&deg; / 28&deg;</p>
+        </div>
+      </li>
+    </ul>
+    <button>Change city</button>
+    <p>Coded by Nsovo Marhanele</p>
+
+    <script src="src/script.js"></script>
+  </body>
 </html>
